Fix image alignment bug

--- a/src/assets/styles/partials/components/_picture.scss
+++ b/src/assets/styles/partials/components/_picture.scss
@@ -1,7 +1,7 @@
 @import '../mixins';
 
 .lazy-picture {
-  display: block;
+  display: flex;
 }
 
 .lazy-img {
